# chatbot-ui

./: .gitignore  LICENSE
chatbot_api/: README.md  config.yml  domain.yml  endpoints.yml  pyproject.toml
chatbot_api/data/: nlu.yml  stories.yml
chatbot_ui/: .env.local  README.md  chatbot_ui.py  pyproject.toml
chatbot_ui/lib/: routes.py
chatbot_ui/lib/core/: asyncio_core.py
chatbot_ui/static/: chatbot_full_page.html  chatbot_widget.html  chatbot_widget_page.html
chatbot_ui/widget/: README.md  index.js  package-lock.json  tailwind.config.js
chatbot_ui/widget/public/: index.html
chatbot_ui/widget/src/Widget/: AppContext.js  index.jsx
chatbot_ui/widget/src/Widget/WidgetLayout/Header/: index.jsx
chatbot_ui/widget/src/Widget/WidgetLayout/Keypad/: index.jsx
chatbot_ui/widget/src/Widget/WidgetLayout/Launcher/: index.jsx
chatbot_ui/widget/src/Widget/WidgetLayout/Messages/: utils.js
