[tool.poetry]
name = "chatbot-api"
version = "0.0.1"
description = ""
authors = ["Ryan Bostian <rab0309@gmail.com>"]
readme = ""
packages = [{include = "chatbot_api"}]

[tool.poetry.dependencies]
python = "3.10.11"
rasa = "^3.6.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"